0.8.0/_sources/generated/statsmodels.tsa.statespace.dynamic_factor.DynamicFactor.rst.txt
statsmodels.tsa.statespace.dynamic_factor.DynamicFactor
=======================================================

.. currentmodule:: statsmodels.tsa.statespace.dynamic_factor

.. autoclass:: DynamicFactor

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
    
    
      ~DynamicFactor.filter
    
    
      ~DynamicFactor.fit
    
    
      ~DynamicFactor.from_formula
    
    
      ~DynamicFactor.hessian
    
    
      ~DynamicFactor.impulse_responses
    
    
      ~DynamicFactor.information
    
    
      ~DynamicFactor.initialize
    
    
      ~DynamicFactor.initialize_approximate_diffuse
    
    
      ~DynamicFactor.initialize_known
    
    
      ~DynamicFactor.initialize_statespace
    
    
      ~DynamicFactor.initialize_stationary
    
    
      ~DynamicFactor.loglike
    
    
      ~DynamicFactor.loglikeobs
    
    
      ~DynamicFactor.observed_information_matrix
    
    
      ~DynamicFactor.opg_information_matrix
    
    
      ~DynamicFactor.predict
    
    
      ~DynamicFactor.prepare_data
    
    
      ~DynamicFactor.score
    
    
      ~DynamicFactor.score_obs
    
    
      ~DynamicFactor.set_conserve_memory
    
    
      ~DynamicFactor.set_filter_method
    
    
      ~DynamicFactor.set_inversion_method
    
    
      ~DynamicFactor.set_smoother_output
    
    
      ~DynamicFactor.set_stability_method
    
    
      ~DynamicFactor.simulate
    
    
      ~DynamicFactor.smooth
    
    
      ~DynamicFactor.transform_jacobian
    
    
      ~DynamicFactor.transform_params
    
    
      ~DynamicFactor.untransform_params
    
    
      ~DynamicFactor.update
    
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~DynamicFactor.endog_names
      ~DynamicFactor.exog_names
      ~DynamicFactor.initial_variance
      ~DynamicFactor.initialization
      ~DynamicFactor.loglikelihood_burn
      ~DynamicFactor.param_names
      ~DynamicFactor.start_params
      ~DynamicFactor.tolerance
   
   