v0.11.1/_sources/generated/statsmodels.tsa.statespace.dynamic_factor.DynamicFactor.rst.txt
statsmodels.tsa.statespace.dynamic\_factor.DynamicFactor
========================================================

.. currentmodule:: statsmodels.tsa.statespace.dynamic_factor

.. autoclass:: DynamicFactor
   :exclude-members:

   
   
   .. rubric:: Methods

   .. autosummary::
      :toctree:

      ~DynamicFactor.clone
      ~DynamicFactor.filter
      ~DynamicFactor.fit
      ~DynamicFactor.fit_constrained
      ~DynamicFactor.fix_params
      ~DynamicFactor.from_formula
      ~DynamicFactor.handle_params
      ~DynamicFactor.hessian
      ~DynamicFactor.impulse_responses
      ~DynamicFactor.information
      ~DynamicFactor.initialize
      ~DynamicFactor.initialize_approximate_diffuse
      ~DynamicFactor.initialize_known
      ~DynamicFactor.initialize_statespace
      ~DynamicFactor.initialize_stationary
      ~DynamicFactor.loglike
      ~DynamicFactor.loglikeobs
      ~DynamicFactor.observed_information_matrix
      ~DynamicFactor.opg_information_matrix
      ~DynamicFactor.predict
      ~DynamicFactor.prepare_data
      ~DynamicFactor.score
      ~DynamicFactor.score_obs
      ~DynamicFactor.set_conserve_memory
      ~DynamicFactor.set_filter_method
      ~DynamicFactor.set_inversion_method
      ~DynamicFactor.set_smoother_output
      ~DynamicFactor.set_stability_method
      ~DynamicFactor.simulate
      ~DynamicFactor.simulation_smoother
      ~DynamicFactor.smooth
      ~DynamicFactor.transform_jacobian
      ~DynamicFactor.transform_params
      ~DynamicFactor.untransform_params
      ~DynamicFactor.update
   
   
   
   
   
   .. rubric:: Properties

   .. autosummary::
      :toctree:

      ~DynamicFactor.endog_names
      ~DynamicFactor.exog_names
      ~DynamicFactor.initial_variance
      ~DynamicFactor.initialization
      ~DynamicFactor.loglikelihood_burn
      ~DynamicFactor.param_names
      ~DynamicFactor.start_params
      ~DynamicFactor.state_names
      ~DynamicFactor.tolerance
   
   
   